publish-to-github from 05376753401da47f0b3f889b4fa3d636c734f2e9

--- a/photos.html
+++ b/photos.html
@@ -13,11 +13,11 @@
 
     <!-- Place favicon.ico & apple-touch-icon.png
         in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/jakevdp/media/favicon.ico">
-  <link rel="apple-touch-icon" href="/jakevdp/media/apple-touch-icon.png">
+  <link rel="shortcut icon" href="/media/favicon.ico">
+  <link rel="apple-touch-icon" href="/media/apple-touch-icon.png">
   
       <!--<link rel="stylesheet" href="https://github.com/themes/minimal/stylesheets/styles.css">-->
-    <link rel="stylesheet" href="/jakevdp/media/js/styles.css">
+    <link rel="stylesheet" href="/media/js/styles.css">
     <style>
       header { zoom: 1.2; }
       header h1 { margin-bottom: 5px; }
@@ -58,18 +58,18 @@
       }
     </style>
     <!--<script src="https://github.com/themes/minimal/javascripts/scale.fix.js"></script>-->
-    <script src="/jakevdp/media/js/scale.fix.js"></script>
+    <script src="/media/js/scale.fix.js"></script>
     </head>
     
   <body id="photos">
       <div class="wrapper">
             <header>
-                <h1><a href="/jakevdp/">Jake VanderPlas</a></h1>
+                <h1><a href="/">Jake VanderPlas</a></h1>
 			<br>
-        <p class="view"><a href="/jakevdp/research.html">Research<small>The Things I think About</small></a></p>
-        <p class="view"><a href="/jakevdp/projects.html">Open Source Projects<small>Code You Might find Useful</small></a></p>
-        <p class="view"><a href="/jakevdp/speaking.html">Videos of my Talks<small>Astronomy, Python, and Beyond</small></a></p>
-        <p class="view"><a href="/jakevdp/vitae.html">Vitae<small>All About my Work</small></a></p>
+        <p class="view"><a href="/research.html">Research<small>The Things I think About</small></a></p>
+        <p class="view"><a href="/projects.html">Open Source Projects<small>Code You Might find Useful</small></a></p>
+        <p class="view"><a href="/speaking.html">Videos of my Talks<small>Astronomy, Python, and Beyond</small></a></p>
+        <p class="view"><a href="/vitae.html">Vitae<small>All About my Work</small></a></p>
         		  
 	        <h3>On the Web</h3>
         <p class="view"><a href="http://github.com/jakevdp" target="tab">GitHub</a>
@@ -84,29 +84,29 @@
 <ul style="padding: 0px">
 
 <li style="display: inline-block; width:30%; margin: 1%;">
-<a href="/jakevdp/media/images/vanderplas-12medium.jpg"><img src="/jakevdp/media/images/vanderplas-2-thumb.jpg"></a><br>
-[<a href="/jakevdp/media/images/vanderplas-2-thumb.jpg">thumb</a> |
-<a href="/jakevdp/media/images/vanderplas-2-medium.jpg">5x7</a> |
-<a href="/jakevdp/media/images/vanderplas-2-large.jpg">hi-res</a> ]
+<a href="/media/images/vanderplas-12medium.jpg"><img src="/media/images/vanderplas-2-thumb.jpg"></a><br>
+[<a href="/media/images/vanderplas-2-thumb.jpg">thumb</a> |
+<a href="/media/images/vanderplas-2-medium.jpg">5x7</a> |
+<a href="/media/images/vanderplas-2-large.jpg">hi-res</a> ]
 </li>
 
 <li style="display: inline-block; width:30%; margin: 1%;">
-<a href="/jakevdp/media/images/vanderplas-1-medium.jpg"><img src="/jakevdp/media/images/vanderplas-1-thumb.jpg"></a><br>
-[<a href="/jakevdp/media/images/vanderplas-1-thumb.jpg">thumb</a> |
-<a href="/jakevdp/media/images/vanderplas-1-medium.jpg">5x7</a> |
-<a href="/jakevdp/media/images/vanderplas-1-large.jpg">hi-res</a> ]
+<a href="/media/images/vanderplas-1-medium.jpg"><img src="/media/images/vanderplas-1-thumb.jpg"></a><br>
+[<a href="/media/images/vanderplas-1-thumb.jpg">thumb</a> |
+<a href="/media/images/vanderplas-1-medium.jpg">5x7</a> |
+<a href="/media/images/vanderplas-1-large.jpg">hi-res</a> ]
 </li>
 
 <li style="display: inline-block; width:30%; margin: 1%;">
-<a href="/jakevdp/media/images/vanderplas-3-medium.jpg"><img src="/jakevdp/media/images/vanderplas-3-thumb.jpg"></a><br>
-[<a href="/jakevdp/media/images/vanderplas-3-thumb.jpg">thumb</a> |
-<a href="/jakevdp/media/images/vanderplas-3-medium.jpg">5x7</a> |
-<a href="/jakevdp/media/images/vanderplas-3-large.jpg">hi-res</a> ]
+<a href="/media/images/vanderplas-3-medium.jpg"><img src="/media/images/vanderplas-3-thumb.jpg"></a><br>
+[<a href="/media/images/vanderplas-3-thumb.jpg">thumb</a> |
+<a href="/media/images/vanderplas-3-medium.jpg">5x7</a> |
+<a href="/media/images/vanderplas-3-large.jpg">hi-res</a> ]
 </li>
 
 </ul>
 
-<h2>Brief Bio</h2>
+<!-- <h2>Brief Bio</h2>
 
 <h3>General</h3>
 <p>Dr. Jake VanderPlas is the Director of Research in Physical Sciences at the University of Washington's eScience Institute, an interdisciplinary program designed to support data-driven discovery in a wide range of scientific fields. His own research is in astronomy, astrophysics, machine learning, and scalable computation. Previously, VanderPlas was an NSF post-doctoral fellow working jointly between the Astronomy and Computer Science departments at the University of Washington. The thesis topic of his PhD (University of Washington, 2012) concerned <i>weak gravitational lensing</i>, a technique that uses small gravitational perturbations of light paths to learn about the distribution of matter in the universe. VanderPlas works to encourage reproducible and open research practices across scientific disciplines, and to this end develops open-source scientific computing tools and often presents tutorials on scientific computing, primarily in the Python programming language.
@@ -114,7 +114,7 @@
 
 <h3>Python-focused</h3>
 <p>
-Jake Vanderplas is the Director of Research in the Physical Sciences at the University of Washington's eScience Institute, an interdisciplinary program designed to support data-driven discovery in a wide range of scientific fields. His own research is in astronomy, astrophysics, machine learning, and scalable computation. In addition, he is a maintainer and/or frequent contributor to many open source Python projects, including scikit-learn, scipy, mpld3 and others. He occasionally blogs about Python, machine learning, data visualization, open science, and related topics at <a href="http://jakevdp.github.io">http://jakevdp.github.io</a>.
+Jake Vanderplas is the Director of Research in the Physical Sciences at the University of Washington's eScience Institute, an interdisciplinary program designed to support data-driven discovery in a wide range of scientific fields. His own research is in astronomy, astrophysics, machine learning, and scalable computation. In addition, he is a maintainer and/or frequent contributor to many open source Python projects, including scikit-learn, scipy, mpld3 and others. He occasionally blogs about Python, machine learning, data visualization, open science, and related topics at <a href="http://jakevdp.github.io">http://jakevdp.github.io</a>. -->
 
       </section>
             <footer>
