--- a/research.html
+++ b/research.html
@@ -13,11 +13,11 @@
 
     <!-- Place favicon.ico & apple-touch-icon.png
         in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/jakevdp/media/favicon.ico">
-  <link rel="apple-touch-icon" href="/jakevdp/media/apple-touch-icon.png">
+  <link rel="shortcut icon" href="/media/favicon.ico">
+  <link rel="apple-touch-icon" href="/media/apple-touch-icon.png">
   
       <!--<link rel="stylesheet" href="https://github.com/themes/minimal/stylesheets/styles.css">-->
-    <link rel="stylesheet" href="/jakevdp/media/js/styles.css">
+    <link rel="stylesheet" href="/media/js/styles.css">
     <style>
       header { zoom: 1.2; }
       header h1 { margin-bottom: 5px; }
@@ -58,18 +58,18 @@
       }
     </style>
     <!--<script src="https://github.com/themes/minimal/javascripts/scale.fix.js"></script>-->
-    <script src="/jakevdp/media/js/scale.fix.js"></script>
+    <script src="/media/js/scale.fix.js"></script>
     </head>
     
   <body id="research">
       <div class="wrapper">
             <header>
-                <h1><a href="/jakevdp/">Jake VanderPlas</a></h1>
+                <h1><a href="/">Jake VanderPlas</a></h1>
 			<br>
-        <p class="view"><a href="/jakevdp/research.html">Research<small>The Things I think About</small></a></p>
-        <p class="view"><a href="/jakevdp/projects.html">Open Source Projects<small>Code You Might find Useful</small></a></p>
-        <p class="view"><a href="/jakevdp/speaking.html">Videos of my Talks<small>Astronomy, Python, and Beyond</small></a></p>
-        <p class="view"><a href="/jakevdp/vitae.html">Vitae<small>All About my Work</small></a></p>
+        <p class="view"><a href="/research.html">Research<small>The Things I think About</small></a></p>
+        <p class="view"><a href="/projects.html">Open Source Projects<small>Code You Might find Useful</small></a></p>
+        <p class="view"><a href="/speaking.html">Videos of my Talks<small>Astronomy, Python, and Beyond</small></a></p>
+        <p class="view"><a href="/vitae.html">Vitae<small>All About my Work</small></a></p>
         		  
 	        <h3>On the Web</h3>
         <p class="view"><a href="http://github.com/jakevdp" target="tab">GitHub</a>
