publish-to-github from cece601e63f1f1e2326aea3dc2f0d64ebf0a773d

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 	<p align="right" style="font-size:80%;color:#CCCCCC;">
 <img src="/media/images/dosewallips_meadows.jpg"
      width=490 height=490>
-<br>Dosewallips Meadow, Olympic National Park</p>
+<br>Dose Meadows, Olympic National Park</p>
 
-<p>I'm a Senior Data Science Fellow at the University of
+<p>I'm the director of Open Software at the University of
 Washington's <a href="http://escience.washington.edu/">eScience institute</a>.
 I research and teach in a variety of areas, including Astronomy,
 Astrostatistics, Machine Learning, and Scalable Computation.</p>
