--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <header>
                 <h1><a href="/">Jake VanderPlas</a></h1>
 			<br>
-        <p class="view"><a href="/research.html">Research<small>The Things I think About</small></a></p>
         <p class="view"><a href="/projects.html">Open Source Projects<small>Code You Might find Useful</small></a></p>
         <p class="view"><a href="/speaking.html">Videos of my Talks<small>Astronomy, Python, and Beyond</small></a></p>
         <p class="view"><a href="/vitae.html">Vitae<small>All About my Work</small></a></p>
@@ -84,10 +83,8 @@
      width=490 height=490>
 <br>Dose Meadows, Olympic National Park</p>
 
-<p>I'm the director of Open Software at the University of
-Washington's <a href="http://escience.washington.edu/">eScience institute</a>.
-I research and teach in a variety of areas, including Astronomy,
-Astrostatistics, Machine Learning, and Scalable Computation.</p>
+<p>I'm currently a software engineer at Google Research in Seattle,
+  and developer on a number of open source Python projects.</p>
 
       </section>
             <footer>
